workloads/youtrack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtrack
  namespace: youtrack-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - youtrack.ops.last-try.org
        - yt.ops.last-try.org
      secretName: youtrack-tls
  rules:
    - host: youtrack.ops.last-try.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtrack
                port:
                  number: 8080
    - host: yt.ops.last-try.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtrack
                port:
                  number: 8080
